added support for using non blocking HAL API interfaces (using Optional, List or plain resource/state instances as return types)